erDiagram
    STATIONS ||--o{ VEHICLES : contains
    STATIONS ||--o{ DISPATCH_RULES : manages
    
    EMERGENCY_TYPES ||--o{ DISPATCH_RULES : defines
    EMERGENCY_TYPES ||--o{ INCIDENTS : triggers
    
    INCIDENTS ||--o{ INCIDENT_VEHICLES : contains
    INCIDENTS ||--o{ OPERATIONAL_FORMS : requires
    INCIDENTS ||--o{ INCIDENT_EVENTS : generates
    INCIDENTS ||--o{ INCIDENT_HISTORY : archives
    
    VEHICLES ||--o{ INCIDENT_VEHICLES : assigned_to
    VEHICLES ||--o{ INCIDENT_EVENTS : participates
    
    STATIONS {
        int id PK
        string code
        string name
        string address
        float latitude
        float longitude
        string phone
        string email
    }
    
    EMERGENCY_TYPES {
        int id PK
        string code
        string name
        string description
        int required_units
        int required_personnel
        string morse_code
        int priority
        boolean active
    }
    
    VEHICLES {
        int id PK
        string vehicle_code
        string vehicle_type
        int station_id FK
        string status
        string driver_name
        int capacity
        float last_location_lat
        float last_location_lng
    }
    
    DISPATCH_RULES {
        int id PK
        int emergency_type_id FK
        int priority_order
        string vehicle_type
        string morse_code
        string telegram_message
        int required_count
    }
    
    INCIDENTS {
        int id PK
        string incident_code
        int emergency_type_id FK
        string street_1
        string street_2
        float latitude
        float longitude
        string location_notes
        string caller_name
        string caller_phone
        string incident_description
        string status
        int priority
    }
    
    INCIDENT_VEHICLES {
        int id PK
        int incident_id FK
        int vehicle_id FK
        string notes
    }
    
    OPERATIONAL_FORMS {
        int id PK
        int incident_id FK
        int personnel_on_scene
        string actions_taken
        string outcome
        boolean additional_units_requested
        boolean ambulance_requested
    }
    
    INCIDENT_EVENTS {
        int id PK
        int incident_id FK
        int vehicle_id FK
        string event_type
        string description
        string user_name
    }
    
    INCIDENT_HISTORY {
        int id PK
        int incident_id
        string incident_code
        string emergency_type
        string location_streets
        string status
        int vehicles_assigned
    }
    
    AUDIT_LOG {
        int id PK
        string entity_type
        int entity_id
        string action
        string changed_by
    }